[tool.poetry]
name = "buzzing"
version = "0.1.0"
description = "Buzz Telegram with important notifications"
authors = [" Sanket Satish Mehta <mehtasankets@gmail.com>"]
readme = "README.md"
packages = [{include = "pkgname"}]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
