[tool.poetry]
name = "buzzing"
version = "0.1.0"
description = "Buzz Telegram with important notifications"
authors = [" Sanket Satish Mehta <mehtasankets@gmail.com>"]
readme = "README.md"
packages = [{include = "buzzing"}]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^20.2"
requests = "^2.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
